<resources>
    <string name="app_name">lazada</string>
    <string name="action_settings">Settings</string>
    <string name="splash_text_view_1">Thế giới mua sắm trong tầm tay</string>
    <string name="splash_text_view_2">Giao hàng tận nơi + Thanh toán dễ dàng</string>
    <string name="splash_text_view_3">100% bảo vệ người tiêu dùng</string>
    <string name="textview_search">Tìm kiếm trên lazada</string>

    <!-- start menu-->
    <string name="menu_login">Đăng nhập</string>
    <string name="menu_notifications">Thông báo của tôi</string>
    <string name="menu_orders">Đơn hàng của tôi</string>
    <string name="menu_settings">Cài đặt</string>
    <string name="menu_policies">Chính sách</string>
    <string name="menu_help">Hổ trợ</string>
    <string name="menu_logout">Đăng xuất</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--end menu-->

    <!--start tabs-->
    <string name="tabs_highlights">Khuyến Mãi</string>
    <string name="tabs_taobao_collection">Voucher Giảm Giá</string>
    <string name="tabs_fashion">Thời Trang</string>
    <string name="tabs_health_beauty">Làm Đẹp</string>
    <string name="tabs_baby_toys">Đồ Chơi Cho Bé</string>
    <string name="tabs_home_living">Nhà Cửa &#38; Đời Sống</string>
    <string name="tabs_electronics">Điện Tử</string>
    <string name="tabs_motors">Ô Tô &#38; Xe Máy</string>
    <!-- end tabs-->
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!--   start account-->
    <string name="tabs_login">Đăng nhập</string>
    <string name="tabs_register">Đăng ký</string>
    <string name="lable_login_register">Đăng nhập/Đăng ký</string>
    <string name="edit_text_email">Địa chỉ email</string>
    <string name="edit_text_password">Mật khẩu</string>
    <string name="edit_text_forgot_password">Quên mật khẩu?</string>
    <string name="button_login">Đăng nhập</string>
    <string name="text_view_login">Hoặc đăng nhập bằng</string>
    <string name="button_facebook">Facebook</string>
    <string name="button_google">Google</string>
    <string name="lable_full_name">Cần điền tất cả các mục</string>
    <string name="edit_text_fullname">Họ tên đầy đủ</string>
    <string name="edit_text_retype_pass">Nhập lại mật khẩu</string>
    <string name="switch_information">Tôi muốn nhận các thông báo và khuyến mãi đặc biệt từ Lazada</string>
    <string name="lable_privacy_policy">Tôi đã đọc và hiểu các diều khoản và chính sách chung của Lazada</string>
    <string name="button_register">Đăng ký</string>
    <!--end account-->

    <string name="facebook_app_id">136454806911514</string>
    <string name="server_client_id">386935203420-0n875k4gpaot81odflnu0g60o36md1aq.apps.googleusercontent.com</string>

    <string name="message_progress_dialog">Please watting....</string>


    <!--start error-->
    <string name="error_pass_empty">Mục này còn thiếu</string>
    <string name="error_pass_min_invalid">Mật khẩu phải chứa ít nhất % ký tự</string>
    <string name="error_pass_max_invalid">Mật khẩu phải chứa nhiều nhất % ký tự</string>
    <string name="error_pass_invalid">Mật khẩu phải chứa ít nhất một chử và số</string>
    <string name="error_pass_not_match">Mật khẩu không trùng nhau</string>
    <string name="error_full_name_empty">Mục này còn thiếu</string>
    <string name="error_email_empty">Mục này còn thiếu</string>
    <string name="error_email_invalid">Email không hợp lệ</string>
    <!--end error-->

    <!--  start dialog-->
    <string name="text_title_dialog_Send_To_Home">Giao hàng tận nơi</string>
    <string name="text_title_dialog_safe">Thương gia đáng tin cậy</string>
    <string name="text_title_dialog_security">Bảo vệ người mua hàng</string>
    <string name="text_content_dialog_Send_To_Home">Hãy chọn giải pháp trả tiền mặt cho nhân viên giao hàng khi được nhận hàng</string>
    <string name="text_content_dialog_safe">Các thương nhân thành viên đều được chọn lọc cẩn thận và đạt cam kết về chất lượng sản phẩm</string>
    <string name="text_content_dialog_security">Bạn có thể hoàn trả hàng trong vòng 14 ngày kể từ khi mua sản phẩm nếu bạn không hài lòng với sản phẩm đã mua</string>
    <string name="button_dialog_ok">OK</string>
    <string name="button_dialog_Send_To_Home">Giao hàng tận \n nơi</string>
    <string name="button_dialog_safe">Thương gia\n đáng tin cậy</string>
    <string name="button_dialog_security">Bảo vệ người \n mua hàng</string>
    <!--  end dialog-->

    <!--start list product-->
    <string name="button_fiter">Lọc</string>
    <string name="button_sort">Sắp sếp</string>
    <!--end detail-->
    <!--start detail product viewpager-->
    <string name="tabs_view_pager_overview">Tổng quan sản phẩm</string>
    <string name="tabs_view_pager_product_detail">Chi tiết sản phẩm</string>
    <string name="tabs_view_pager_qa">Hỏi đáp</string>
    <string name="tabs_view_pager_rating_review">Đánh giá và nhận xét</string>
    <!--end detail product viewpager-->

    <!--start detail product page-->
    <string name="text_view_more_product">Các sản phẩm của</string>
    <string name="text_view_sold_fulfilled">Được bán và giao hàng bởi</string>
    <string name="text_view_product_detail">Chi tiết sản phẩm</string>
    <string name="text_view_security_1">Đảm bảo chính hảng 100%</string>
    <string name="text_view_security_2">Thanh toán đảm bảo</string>
    <string name="text_view_security_3">Đánh giá và nhận xét</string>
    <string name="text_view_security_4">Đánh giá và nhận xét</string>
    <string name="button_security_1">Bảo vệ người    \n  mua hàng 100%</string>
    <string name="button_security_2">Đảm bảo   \n  sự hài lòng</string>
    <string name="text_view_show_all_product_detail">Xem tất cả chi tiết sản phẩm</string>
    <string name="text_view_rating_review">Đáng giá và nhận xét</string>
    <string name="text_view_writter_rating_review">Viết bài đánh giá</string>
    <string name="text_view_show_all_rating_review">Xem mọi nhận xét</string>
    <!--end detail product page-->

    <!--start pager rating review-->
    <string name="text_view_review_rate_product">Nhận xét về sản phẩm này</string>
    <string name="text_view_review_tap_to_rate">Chọn để đánh giá</string>
    <string name="text_view_review_name">Tên của bạn</string>
    <string name="text_view_review_title">Tựa đề bài nhận xét</string>
    <string name="text_view_review_description">Mô tả nhận xét</string>
    <string name="text_view_review_submit">Đăng nhận xét</string>
    <!--end pager rating review-->

</resources>
