<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.lekham.lazada.View.Main.MainActivity">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="Search"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/ic_shopping_cart_white_24dp"
        android:title="Cart"
        app:actionLayout="@layout/customer_menu_cart"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="More"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_login"
                android:icon="@drawable/ic_sentiment_satisfied_black_24dp"
                android:title="@string/menu_login" />
            <item
                android:id="@+id/menu_notifications"
                android:icon="@drawable/ic_notifications_none_black_24dp"
                android:title="@string/menu_notifications" />
            <item
                android:id="@+id/menu_orders"
                android:icon="@drawable/ic_event_note_black_24dp"
                android:title="@string/menu_orders" />
            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/menu_policies"
                android:icon="@drawable/ic_content_paste_black_24dp"
                android:title="@string/menu_policies" />
            <item
                android:id="@+id/menu_help"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout"
                android:visible="false" />

        </menu>
    </item>

</menu>
