<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:padding="@dimen/padding_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lable_full_name" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_fullname" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10">

            <com.example.lekham.lazada.CustomView.EditTextPassword
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_password"
                app:useStrike="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10">

            <com.example.lekham.lazada.CustomView.EditTextPassword
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_retype_pass"
                app:useStrike="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_10"
            android:checked="true"
            android:text="@string/switch_information" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_10"
            android:text="@string/lable_privacy_policy" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_10"
            android:background="@color/bg_main"
            android:text="@string/button_register"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_view_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFacebook"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:layout_weight="1"
                android:background="@drawable/select_bg_button_fa"
                android:drawableLeft="@drawable/facebookiconsmall"
                android:gravity="center"
                android:text="@string/button_facebook"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnGoogle"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:layout_weight="1"
                android:background="@drawable/select_bg_button_go"
                android:drawableLeft="@drawable/googleplussmall"
                android:gravity="center"
                android:text="@string/button_google"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

